new file:   diagnostics/SIPN/       update and improvement of diasgnostics for SIPN
new file:   templates/user_nl_hydros
      also in $DIR_TEMPL now

modified:   scripts_oper/create_caso.sh
modified:   scripts_oper/create_caso_leonardo.sh
      modified to copy the user_nl_hydros

new file:   postproc/C3S_standard/submit_tar_C3S_offline_2023-2024.sh
new file:   postproc/C3S_standard/tar_C3S_2023-2024.sh
modified:   postproc/C3S_standard/launch_postproc_C3S_offline_2023-2024.sh
      new routines for 2023-3024 hidncasts

A few updates with refinement of memory requests

modified:   postproc/C3S_standard/fix_spikes_DMO_single_member.sh
modified:   postproc/C3S_standard/launch_c3s_qa_checker.sh
modified:   postproc/C3S_standard/plot_timeseries_spike_c3s.sh
modified:   postproc/C3S_standard/postproc_C3S_offline.sh
modified:   postproc/C3S_standard/postproc_C3S_offline_resume.sh
modified:   postproc/C3S_standard/push4ECMWF.sh
modified:   postproc/C3S_standard/qa_checker_table.json
modified:   postproc/cam/fix_spikes_C3S_single_member.sh
modified:   postproc/cam/fixing_after_C3S_spike.sh

--- a/src/diagnostics/SIPN/README
+++ b/src/diagnostics/SIPN/README
@@ -1,12 +1,33 @@
 The postprocessing addresses daily data and select a timeseries of 3 months (skipping the first)
 
 OUTPUT DIR 
-/work/csp/sp2/SPS3.5/SIPN/sea-ice_areas
-/work/csp/sp2/SPS3.5/SIPN/concentrations
+/work/cmcc/cp1/CPS/CMCC-CPS1/SIPN/YYYYMM
 
-Data must be uploaded on google drive sp1
-Create a directory
-CMCC-SEA-ICE/YYYYMM
-copy the files locally in a temporary directory and upload them all there
+Data are automatically uploaded to google drive sp1
 
-Before notifying the data are available check them followin instruction doc and in case of doubt ask Dorotea Iovino
+        CMCC-SEA-ICE
+
+
+Before notifying Francois, check the data
+check_concentrations.sh 
+
+It produces ensmean and ensstd for concetrations 
+
+- /work/cmcc/cp1/scratch/SIPN/cmcc_202511_concentration_mean.nc
+- /work/cmcc/cp1/scratch/SIPN/cmcc_202511_concentration_stdev.nc
+
+
+and send to gdrive 
+
+        CMCC-SEA-ICE/checks
+
+- cmcc_total-area.202511.txt
+- cmcc_001_regional-area.202511.txt
+- cmcc_020_regional-area.202511.txt
+- cmcc_046_regional-area.202511.txt
+
+
+On gdrive open a new sheet and import (from file menu) cmcc_total-area.202511.txt, selecting personally defined separator as ;
+Then create a graph with all the members and check if it looks correct
+
+In the same way check the 3 samples for regional areas
